--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <button onclick="exportToPDF()"><i class="fas fa-file-pdf"></i> Export to PDF</button>
                 <button onclick="resetAllPolygons()"><i class="fas fa-eraser"></i> Reset All Areas</button>
             </div>
-            <div id="total-area">Total Area: 0 m²</div>
+            <div id="total-area">Total Area: 0 mÂ²</div>
             <div id="lca-results">
                 <div id="total-co2-saved">Total CO2e Saved: 0 kg</div>
                 <div id="total-water-saved">Total Water Saved: 0 liters</div>
@@ -64,8 +64,8 @@
         <section id="map-container">
             <input id="search-bar" type="text" placeholder="Search for address" aria-label="Search for address">
             <div id="map"></div>
+        </section>
         <section id="lca-report" style="display: none;">
-        <!-- The info box is now moved under the roof type selector -->
         </section>
     </main>
     <aside id="saved-designs-sidebar" class="hidden" role="complementary">
