--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.3.2/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/script.js" defer></script>
+    <script src="js/auth.js" defer></script> <!-- Add this line to include auth.js -->
 </head>
 <body onload="initMap()">
     <header role="banner">
